working functionality except link to a movie

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,33 @@
 <!Doctype html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="/static/main.css">
-    </head>
-    <body>
-        <h1>The Kino</h1>
-    </body>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="/static/main.css">
+</head>
+
+<body>
+    <h1>The Kino</h1>
+</body>
+<main>
+    <ul>
+        <% articles.forEach((article)=> { %>
+            <li>
+                <a href=<%= article.id %>
+                    <h2>
+                    <%= article.attributes.title %>
+                    </h2>
+                </a>
+
+                <!--<a href=<%= /movies/id %>
+                    <%= article.attributes.title %>
+                </a>
+                <h2>
+                    <%= article.attributes.title %>
+                </h2>-->
+            </li>
+            <hr />
+        <% }) %>
+    </ul>
+</main>
+
 </html>
