--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             <li>
                 <a href=<%= '/movies/'+article.id %>
                     <h2>
-                    <%= article.attributes.title %>
+                    <%= article.title %>
                     </h2>
                 </a>
             </li>
