--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -7,12 +7,12 @@
 
 <body>
     <h1>
-        <%= article.attributes.title %>
+        <%= article.title %>
     </h1>
     <p>
-        <%= article.attributes.intro %>
+        <%= article.intro %>
     </p>
-    <img src=<%= article.attributes.image.url %>
+    <img src=<%= article.image.url %>
 
 </body>
 
