markdown movie.intro to HTML & render to movie template

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -9,10 +9,10 @@
     <h1>
         <%= article.title %>
     </h1>
-    <p>
-        <%= article.intro %>
-    </p>
-    <img src=<%= article.image.url %>
+
+    <%- introText %>
+
+    <img src=<%=article.image.url %>
 
 </body>
 
