New page with error message & status code

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -10,10 +10,14 @@
         <%= article.title %>
     </h1>
 
+    <div>
     <%- introText %>
+    </div>
 
+    <div>
     <img src=<%=article.image.url %>
-
+    </div>
+    
 </body>
 
 </html>
