improved sep of concern in app.js, working tests

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <link rel='stylesheet' type='text/css' href='/static/main.css'>
 </head>
 
 <body>
@@ -11,7 +11,7 @@
     
     <h2>PAGE NOT FOUND</h2>
 
-    <button href=<%='home' %>>homepage</button>
+    <button href=<%='' %>>homepage</button>
 
 </body>
 
