template head, header & footer, css & js for dropdown

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,9 +1,5 @@
-<!Doctype html>
-<html>
-
-<head>
-    <link rel='stylesheet' type='text/css' href='/static/main.css'>
-</head>
+<%- include('head') %>
+<%- include('header') %>
 
 <body>
     <h1>The Kino</h1>
@@ -25,4 +21,5 @@
 
 </body>
 
+<%- include('footer') %>
 </html>
