--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -1,9 +1,5 @@
-<!Doctype html>
-<html>
-
-<head>
-    <link rel='stylesheet' type='text/css' href='/static/main.css'>
-</head>
+<%- include('head') %>
+<%- include('header') %>
 
 <body>
     <h1>
@@ -20,4 +16,5 @@
     
 </body>
 
+<%- include('footer') %>
 </html>
