--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,13 +4,13 @@
     <link rel='stylesheet' type='text/css' href='/static/main.css'>
 </head>
 
-<body>
+<body class='error'>
 
-    <h1>404</h1>
+    <h1 class='errorCode'>404</h1>
     
-    <h2>PAGE NOT FOUND</h2>
+    <h2 class='errorMessage'>PAGE NOT FOUND</h2>
 
-    <button href=<%='' %>>homepage</button>
+    <button class='homeButton' href=<%='' %>>homepage</button>
 
 </body>
 
