link to home page which is the list of movies

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -15,6 +15,7 @@
             <!--<a href="#" class="footer__link">Filmer</a>-->
             <a href="#" class="footer__link">Om oss</a>
             <a href="#" class="footer__link">Nyheter</a>
+            <a href=<%='/' %> class="footer__link">Hem</a>
         </div>
         <div class="footer__thirdContainer">
             <h3 class="footer__heading">Sociala Medier</h3>
