--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
             <!--<a href="#" class="header__link">Filmer</a>-->
             <a href="#" class="header__link">Om oss</a>
             <a href="#" class="header__link">Nyheter</a>
+            <a href=<%='/' %> class="header__link">Hem</a>
         </nav>
         <img src="/static/assets/hamburgerButtonOpen.png" class="header__hamburgerButtonOpen" />
     </div>
