added missing Home-link in hamburger menu

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -14,6 +14,7 @@
             <!--<a href="#" class="header__hamburgerLink">Filmer</a>-->
             <a href="#" class="header__hamburgerLink">Om oss</a>
             <a href="#" class="header__hamburgerLink">Nyheter</a>
+            <a href=<%='/' %> class="header__hamburgerLink">Hem</a>
             <img src="/static/assets/hamburgerButtonClose.png" class="header__hamburgerCloseButton"
                 alt="Hamburger menu close button" />
         </div>
